--- a/src/main/resources/assets/mobsgalore/lang/en_us.json
+++ b/src/main/resources/assets/mobsgalore/lang/en_us.json
@@ -1,3 +1,4 @@
 { "itemGroup.mobsgalore.general": "Mobsgalore",
+  "item.mobsgalore.jockey_spawn_egg": "Jockey Spawn Egg",
   "item.mobsgalore.boar_spawn_egg": "Boar Spawn Egg"
 }
